# random-take-pq-s3

./: Cargo.toml  README.md  plot.py  results.csv  s3_results.csv
src/: datagen.rs  lib.rs  main.rs  osutil.rs  parq.rs  s3prof.rs  sync.rs  take.rs  util.rs
src/parq/: io.rs
