[package]
name = "random-take-bench"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "53.3.0"
arrow-buffer = "53.3.0"
arrow-schema = "53.3.0"
arrow-select = "53.3.0"
async-trait = "0.1.77"
bytes = "1.5.0"
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.11.5"
flume = "0.11.1"
futures = "0.3.29"
glob = "0.3.1"
indicatif = "0.17.11"
lance-datagen = { version = "0.23.0", git = "https://github.com/lancedb/lance.git", tag = "v0.23.0-beta.4" }
num_cpus = "1.16.0"
object_store = { version = "0.10.2", features = ["aws"] }
once_cell = "1.19.0"
parquet = { version = "53.3.0", features = ["async"] }
rand = "0.8.5"
rayon = "1.10.0"
tempfile = "3.15.0"
tokio = { version = "1.35.1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
] }
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-core = "0.1.33"
tracing-subscriber = "0.3.19"
url = "2.5.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "s3prof"
path = "src/s3prof.rs"
